# cua-operator

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
cua/bridges/: base.py  openai.py
cua/contracts/: action.py
cua/operators/: common.py  local.py  remote_client.py  remote_server.py
cua/tools/: __init__.py  darwin.py  win32.py
cua_operator/bridges/: __init__.py  base.py  openai.py
cua_operator/operators/: __init__.py  common.py  local.py  remote_client.py  remote_server.py
cua_operator/tools/: darwin.py  win32.py
samples/: cua-remote-operator-server.py  cua-tools.py  openai-cua-local-operator.py  openai-cua-remote-operator-client.py  openai-quick-start-async.py  openai-quick-start.py
tests/: tools_test.py
